# jaxley

./: .gitattributes  .gitignore  .readthedocs.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  dev.ipynb  graphIO.ipynb  index.html  new_view.ipynb  objects.inv  pyproject.toml  setup.py  sitemap.xml  testing.ipynb  versions.json
.github/workflows/: build_docs.yml  chores.yml  make_release.yml  regression_tests.yml  run_tutorials.yml  tests.yml  update_regression_baseline.yml
code_of_conduct/: index.html
contribute/: index.html
credits/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/code_of_conduct/: index.html
dev/contribute/: index.html
dev/credits/: index.html
dev/faq/: index.html
dev/install/: index.html
dev/search/: search_index.json
docs/: README.md  advanced_tutorials.rst  conf.py  contributing.md  contributor_guide.rst  credits.md  examples.rst  faq.rst  how_to_guide.rst  index.rst  installation.md  jaxley.rst  mkdocs.yml  tutorials.rst
docs/dev_tutorials/: example.swc  graph_backend.ipynb
docs/docs/: contribute.md  credits.md  faq.md  index.md  install.md  reference.md
docs/examples/: 00_l5pc_gradient_descent.ipynb  01_snn_surrogate_grad_descent.ipynb
docs/faq/: question_01.md  question_03.md  question_04.md  question_05.md
docs/how_to_guide/: choose_solver.ipynb  define_custom_stimuli.ipynb  edit_morphologies.ipynb  import_channels_from_neuron.ipynb  ion_diffusion.ipynb  predefined_spike_trains.ipynb  save_and_load.ipynb  set_ncomp.ipynb  upgrade_to_v1.ipynb
docs/reference/: jaxley.connect.rst  jaxley.mechanisms.rst  jaxley.modules.rst  jaxley.optimization.rst  jaxley.simulation.rst  jaxley.utils.rst
docs/tutorials/: 00_jaxley_api.ipynb  01_morph_neurons.ipynb  02_small_network.ipynb  03_setting_parameters.ipynb  04_jit_and_vmap.ipynb  05_channel_and_synapse_models.ipynb  06_groups.ipynb  07_gradient_descent.ipynb  08_importing_morphologies.ipynb  09_advanced_indexing.ipynb  10_advanced_parameter_sharing.ipynb  11_ion_dynamics.ipynb  12_simplified_models.ipynb  13_graph_backend.ipynb  14_surrogate_gradients.ipynb
faq/: index.html
faq/question_01/: index.html
faq/question_02/: index.html
install/: index.html
jaxley/: __init__.py  __version__.py  build_branched_tridiag.py  connect.py  connection.py  distance.py  graph.py  graph_ops.py  integrate.py  solver_gate.py  solver_voltage.py  stimulus.py
jaxley/channels/: __init__.py  channel.py  hh.py  lif.py  pospischil.py  spike.py
jaxley/io/: __init__.py  graph.py  graph_to_module.py  morph_utils.py  neuron.py  swc.py  tmp.py
jaxley/mechanisms/: base.py  solvers.py
jaxley/modules/: __init__.py  base.py  base_old_view.py  branch.py  cell.py  compartment.py  network.py
jaxley/morphology/: __init__.py  distance_utils.py  morph_utils.py
jaxley/optimize/: __init__.py  optimizer.py  transforms.py  utils.py
jaxley/pumps/: __init__.py  ca_pump.py  current_to_concentration_change.py  faraday_electrolysis.py  nernstreversal.py  pump.py
jaxley/synapses/: __init__.py  alpha_synapse.py  conductance.py  current.py  dynamic.py  exp_decay_synapse.py  gap_junction.py  glutamate.py  ionotropic.py  spike.py  synapse.py  tanh_conductance.py  tanh_rate.py  test.py
jaxley/utils/: __init__.py  api_utils.py  cell_utils.py  colors.py  core_utils.py  debug_solver.py  dynamics.py  jax_utils.py  misc_utils.py  morph_attributes.py  plot_utils.py  solver_utils.py  swc.py  syn_utils.py  voltage_solver_utils.py
mkdocs/: README.md  mkdocs.yml
mkdocs/docs/: credits.md  faq.md  index.md
neurax/: __init__.py  build_branched_tridiag.py  cell.py  connection.py  implicit_euler.py  integrate.py  mechanisms.py  network.py  recording.py  solve.py  solver.py  solver_gate.py  solver_voltage.py  stimulus.py  vectorfield.py
neurax/channels/: __init__.py  channel.py  hh.py  hh_channel.py  hh_neuron.py  pospischil.py
neurax/mechanisms/: glutamate_synapse.py  hh.py  hh_channel.py  hh_neuron.py
neurax/modules/: __init__.py  (+6 more)
notebooks/: .matplotlibrc  01_demo_branched.ipynb  02_optimize_params.ipynb  03_deep_network.ipynb  04_refine_api.ipynb  07_async_cells2.ipynb  11_swc_neurax.ipynb  11_swc_neuron.ipynb  12_cable_neurax.ipynb  12_single_cable_neurax.ipynb  dummy.swc
search/: search_index.json
tests/: conftest.py  helpers.py  morph.swc  morph_250.swc  regression_test_baselines.json  test_api_equivalence.py  test_cell_matches_branch.py  test_channels.py  test_channels_channel.py  test_clamp.py  test_composability_of_modules.py  test_connection.py  test_data_feeding.py  test_distance.py  test_dynamics_step_fn.py  test_dynamics_utils.py  test_empty_recording  test_fixtures.py  test_grad.py  test_graph.py  test_groups.py  test_indexing.py  test_ion_diffusion_and_pumps.py  test_make_trainable.py  test_misc.py  test_moving.py  test_optimize.py  test_pickle.py  test_plotting_api.py  test_record_and_stimulate.py  test_regression.py  test_set_ncomp.py  test_shared_state.py  test_solver.py  test_swc.py  test_syn.py  test_synapse_indexing.py  test_transforms.py  test_viewing.py
tutorials/: 01_morph_neurons.ipynb  01_small_network.ipynb  02_setting_parameters.ipynb  02_small_network.ipynb  03_gradient.ipynb  03_setting_parameters.ipynb  03_training.ipynb  04_groups.ipynb  04_jit_and_vmap.ipynb  05_channel_and_synapse_models.ipynb  05_new_mechanisms.ipynb  05_new_mechanisms_CS.ipynb  06_diverse_channels.ipynb  06_groups.ipynb  07_gradient_descent.ipynb  08_importing_morphologies.ipynb  08_morphologies.ipynb  08_working_with_morphologies.ipynb  dev.ipynb  graphIO.ipynb  new_view.ipynb
v0.2.1/: 404.html  index.html  sitemap.xml
v0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.4.0/: 404.html  index.html  sitemap.xml
v0.5.0/: 404.html  index.html  sitemap.xml
v0.6.0/: 404.html  index.html  sitemap.xml
v0.6.1/: 404.html  index.html  sitemap.xml
v0.6.2/: 404.html  index.html  sitemap.xml
(+319 files in other folders)
