[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Jaxley"
version = "0.4.0"
description = "Differentiable neuron simulations."
authors = [
    { name = "jaxleyverse", email = "jaxleyverse@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Adaptive Technologies",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    """License :: OSI Approved :: Apache Software License""",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
]
requires-python = ">=3.10"
readme = "README.md"
keywords = ["neuroscience", "biophysics", "simulator", "jax"]
dependencies = [
    "jax",
    "matplotlib",
    "networkx",
    "numpy",
    "pandas>=2.2.0",
    "tridiax",
]

[project.optional-dependencies]
doc = [
    "jupyter_contrib_nbextensions",
    "notebook <= 6.4.12",
    "traitlets <= 5.9.0",
    "ipython <= 8.9.0",
    "mkdocs",
    "mkdocs-material",
    "markdown-include",
    "mkdocs-redirects",
    "mkdocstrings[python]>=0.18",
    "mike",
    "sphinx",
    "sphinx-autobuild",
    "sphinx_autodoc_typehints",
    "sphinx-math-dollar",
    "myst-nb",
    "jupytext",
    "optax",
    "sphinx-book-theme",
]
dev = [
    "black",
    "isort",
    "jaxley-mech",
    "neuron",
    "pytest",
    "pyright",
    "optax",
]

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)